2015-06-22  Jethro <jethro.donaldson@gmail.com>
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #44977: Incorrect PORT_t and CRC_t definitions for ATxmega64A1U
	and 128A1U
	bug #44279: incorrect USB_TRNCOMPL_vect_num in iox64a1u.h, iox128a1u.h
	* include/avr/iox64a1u.h (CRC_t): Add reserved slot as member.
	(PORT_t): Add member for REMAP.
	(NVM_EE_vect, NVM_SPM_vect,USB_TRNCOMPL_vect): Update vector number.
	(_VECTORS_SIZE): Update size.
	* include/avr/iox128a1u.h: Likewise.

2015-06-19  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #43011: Bug in struct definition of __reg_UCSR1C and 
	__reg_UCSR0C in iom128rfa1.h
	* include/avr/iom128rfa1.h (struct __reg_UCSR0C, struct __reg_UCSR1C):
	Remove SPI mode only bitfields.
	(UCPHA0,UDORD0,UCPHA1,UDORD1): Remove duplicates.

2015-06-18  Georg-Johann Lay <avr@gjlay.de>
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #43828: wdt.h: Wrong inline assembler arguments
	* include/avr/wdt.h (wdt_enable/wdt_disable): Update constraints for
	inline asm operands

2015-05-07  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #44869: trunk doesn't work with gcc 5.1.0-RC-20150412
	* configure.ac (HAS_GCC_5_1): Define if avr-gcc version is 5.1.0
	(--enable-device-lib): Add configure option.
	(HAS_DEV_LIB): Define if enabled by --enable-device-lib or avr-gcc
	version is >= 5.1.0.
	* devtools/Device.am (AVR_TARGET_CRT, AVR_INSTALL_DIR): Define
	based on avr-gcc version.
	(avr_LIBRARIES): Likewise.
	* devtools/gen-avr-lib-tree.sh: Use old crt name.
	* libc/Makefile.am: Include misc sub-directory if device library is
	not enabled.
	* libc/misc/Rules.am: Include eeprom function name mangling if device
	library is not enabled.

2015-04-15  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #44574: Place device-specific libraries in their multilib directory.
	* configure.ac (AC_CONFIG_FILES): Replace dev directory with architecture